--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
         <title>SamIT</title>
   </head>
@@ -15,7 +14,75 @@
   <body>
     <div class = "web-container">
       <div class = "left-cont">
-          Sidebar here
+        <div class = "logo">
+          <img src = "image/logosamit.svg">
+        </div>
+        <div class = "list-menu-container">
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_dashboard.svg">
+            </div>
+            <div class = "menu-text">
+              <h3 class = "text-selected">Dashboard</h3>
+            </div>
+          </div>
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_car.svg">
+            </div>
+            <div class = "menu-text">
+              <h3>Samsat</h3>
+            </div>
+          </div>
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_pajak.svg">
+            </div>
+            <div class = "menu-text">
+              <h3>Info Pajak</h3>
+            </div>
+          </div>
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_panduan.svg">
+            </div>
+            <div class = "menu-text">
+              <h3>Panduan</h3>
+            </div>
+          </div>
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_pembayaran.svg">
+            </div>
+            <div class = "menu-text">
+              <h3>Pembayaran</h3>
+            </div>
+          </div>
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_cc.svg">
+            </div>
+            <div class = "menu-text">
+              <h3>Customer Care</h3>
+            </div>
+          </div>
+          <div class = "menu">
+            <div class = "icon">
+              <img src = "image/icons/ic_settings.svg">
+            </div>
+            <div class = "menu-text">
+              <h3>Settings</h3>
+            </div>
+          </div>
+        </div>
+        <div class="info">
+          <div class="info-logo">
+            <img src="image/icons/ic_green_shield.svg" alt=""> 
+          </div>
+          <p class="info-text text-bold">Awasi pajak kendaraanmu!</p>
+          <p class="info-text">Bayar pajak tidak perlu ribet ! Cukup klik dan beres</p>
+          <p class="info-text text-bold">BAPENDA Jabar</p>
+        </div>
       </div>
       <div class = "mid-cont">
           main contenthere
