add right column in home page

--- a/index.html
+++ b/index.html
@@ -87,9 +87,25 @@
       <div class = "mid-cont">
           main contenthere
       </div>
+
       <div class = "right-cont">
-        right section here
+        <div class="profile-container">
+          <!-- <div class="foto-profile">
+            
+          </div>  -->
+          <img src="image/icons/ic_notification.svg">
+          Aulia Fajri
+          <img src="image/foto/profile.svg" style="padding: 2px;">   
+        </div>
+        
+        <div class="jatuh-tempo-container">
+          jatuh
+        </div>
+        <div class="layanan-container">
+
+        </div>
       </div>
+
     </div>
   </body>
 
