--- a/index.html
+++ b/index.html
@@ -85,14 +85,22 @@
         </div>
       </div>
       <div class = "mid-cont">
-          main contenthere
+          <div class = "mid-header">
+            Iini hello aulia sama search bar
+          </div>
+          <div class = "info-kendaraan">
+            Info kendaraan
+          </div>
+          <div class = "informasi-dashboard">
+            WLWELWELWEL
+          </div>
+          <div class = "banner-iklan">
+            kang emil
+          </div>
       </div>
 
       <div class = "right-cont">
         <div class="profile-container">
-          <!-- <div class="foto-profile">
-            
-          </div>  -->
           <img src="image/icons/ic_notification.svg">
           Aulia Fajri
           <img src="image/foto/profile.svg" style="padding: 2px;">   
