--- a/pages/samling.html
+++ b/pages/samling.html
@@ -95,9 +95,21 @@
               <img src = "../image/icons/search.svg">
             </div>
           </div>
+          <div class="profile-container">
+            <img src="../image/icons/ic_notification.svg">
+            Aulia Fajri
+            <img src="../image/foto/profile.svg" style="padding: 2px;">   
+          </div>
         </div>
 
         <div class = "right-body-cont">
+          <div class = "title-samsat-container">
+            <h1><b>Samsat Keliling</b></h1>
+            <h3>Kota Bandung</h3>
+          </div>
+          <div class = "table-jadwal-container">
+            ini jadwal
+          </div>
         </div>
       </div>
     </div>
