add mid column in homepage

--- a/index.html
+++ b/index.html
@@ -86,10 +86,30 @@
       </div>
       <div class = "mid-cont">
           <div class = "mid-header">
-            Iini hello aulia sama search bar
+            <div class="hello-anda">
+              <h1>Hello, Aulia!</h1>
+              <p>Jalan Ganesha No.10, Bandung</p>
+            </div>
+            <div class = "pencarian">
+              <img src=".\image\icons\search.svg" alt="">
+              <input type="text" placeholder="search">
+            </div>
           </div>
           <div class = "info-kendaraan">
-            Info kendaraan
+            <div class = "kendaraan">
+              <img src=".\image\icons\motorcycle 1.svg" alt="">
+            </div>
+            <div class="detail1">
+              <p>Plat Nomor       : D 1893 ray</p>
+              <p>Jenis Kendaraan  : Motor Sport</p>
+              <p>Warna Kendaraan  : Merah Hitam</p>
+              <p>Nomor Rangka     : 1HGBH41JXMNxxxxx</p>
+            </div>
+            <div class="detail2">
+              <p>Nomor Mesin      : JF21E</p>
+              <p>Jumlah Biaya     : Rp 358.000</p>
+              <p>Diskon Pajak     : Rp 35.800</p>
+            </div>
           </div>
           <div class = "informasi-dashboard">
             WLWELWELWEL
