add iklan banner in homepage

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             WLWELWELWEL
           </div>
           <div class = "banner-iklan">
-            kang emil
+            <img src=".\image\icons\iklan.svg" alt="">
           </div>
       </div>
 
