fix mid in homepage

--- a/index.html
+++ b/index.html
@@ -97,18 +97,23 @@
           </div>
           <div class = "info-kendaraan">
             <div class = "kendaraan">
-              <img src=".\image\icons\motorcycle 1.svg" alt="">
+              <div class = "gambar-kendaraan">
+                <img src=".\image\icons\motorcycle 1.svg" alt="">
+              </div>
+              <div class="detail1">
+                <p>Plat Nomor       : D 1893 ray</p>
+                <p>Jenis Kendaraan  : Motor Sport</p>
+                <p>Warna Kendaraan  : Merah Hitam</p>
+                <p>Nomor Rangka     : 1HGBH41JXMNxxxxx</p>
+              </div>
+              <div class="detail2">
+                <p>Nomor Mesin      : JF21E</p>
+                <p>Jumlah Biaya     : Rp 358.000</p>
+                <p>Diskon Pajak     : Rp 35.800</p>
+              </div>
             </div>
-            <div class="detail1">
-              <p>Plat Nomor       : D 1893 ray</p>
-              <p>Jenis Kendaraan  : Motor Sport</p>
-              <p>Warna Kendaraan  : Merah Hitam</p>
-              <p>Nomor Rangka     : 1HGBH41JXMNxxxxx</p>
-            </div>
-            <div class="detail2">
-              <p>Nomor Mesin      : JF21E</p>
-              <p>Jumlah Biaya     : Rp 358.000</p>
-              <p>Diskon Pajak     : Rp 35.800</p>
+            <div class = "jumlah-kendaraan">
+              <img src=".\image\icons\titik4.svg" alt="">
             </div>
           </div>
           <div class = "informasi-dashboard">
